--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,1 +1,8 @@
-<p>quote works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Welcome to Quotes</h1>
+            
+        </div>
+    </div>
+</div>
