--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,7 +3,8 @@
     <div class="row">
         <div class="col-md-6">
             <h2>Some of the famous quotes include:</h2>
-            <h4 *ngFor='let quote of quotes'>{{quote.name}}</h4>
+            <h5 *ngFor='let quote of quotes'>{{quote.id}}{{quote.name}}</h5>
+            <app-quote-details></app-quote-details>
         </div>
     </div>
 </div>
