This commit will add functionality to see details button

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,1 +1,4 @@
-<p>quote-details works!</p>
+<h5>Author: {{quote.author}}<br>Submitted by: {{quote.personSubmitted}}</h5>
+<button class="btn btn-outline-primary">Like</button>
+<button class="btn btn-outline-info" id="btn1">Dislike</button><br>
+<button class="btn btn-outline-danger" >Delete</button>
