--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,8 +3,11 @@
     <div class="row">
         <div class="col-md-6">
             <h2>Some of the famous quotes include:</h2>
-            <h5 *ngFor='let quote of quotes'>{{quote.id}}{{quote.name}}</h5>
-            <app-quote-details></app-quote-details>
+            <div *ngFor='let quote of quotes;let i = index'>
+                <h5 >{{quote.id}} {{quote.name}}</h5>
+                <button (click)='seeDetails(i)' class="btn btn-success btn-sm" id="scndbutton">Show Details</button>
+                <app-quote-details *ngIf='quote.seeDetails' bind-quote = 'quote'></app-quote-details>
+            </div>
         </div>
     </div>
 </div>
