This commit will add functionality to the delete button

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -6,7 +6,9 @@
             <div *ngFor='let quote of quotes;let i = index'>
                 <h5 >{{quote.id}} {{quote.name}}</h5>
                 <button (click)='seeDetails(i)' class="btn btn-success btn-sm" id="scndbutton">Show Details</button>
-                <app-quote-details *ngIf='quote.seeDetails' bind-quote = 'quote'></app-quote-details>
+                <app-quote-details *ngIf='quote.seeDetails' bind-quote = 'quote' (isDelete)='deleteQuote($event,i)'>
+
+                </app-quote-details>
             </div>
         </div>
     </div>
