--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,4 +1,4 @@
 <h5>Author: {{quote.author}}<br>Submitted by: {{quote.personSubmitted}}</h5>
 <button class="btn btn-outline-primary">Like</button>
 <button class="btn btn-outline-info" id="btn1">Dislike</button><br>
-<button class="btn btn-outline-danger" >Delete</button>
+<button (click)='quoteDelete(true)' class="btn btn-outline-danger" >Delete</button>
