This commit will add like and dislike button

--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,9 +1,9 @@
 h2{
     text-decoration: underline;
 }
-#scndbutton{
+/* #scndbutton{
     margin-left: 5%;
-}
+} */
 #btn1{
     margin-left: 5%;
 }
