--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -5,13 +5,11 @@
             <h2>Some of the famous quotes include:</h2>
             <div *ngFor='let quote of quotes;let i = index'>
                 <h5 >{{quote.id}} {{quote.name}} <br>
-                    <button (click)="quote.upvotes=quote.upvotes+1" class="btn btn-sm btn-outline-primary">Upvote {{quote.upvotes}}</button>
-                    <button (click)="quote.downvotes=quote.downvotes+1" class="btn btn-sm btn-outline-secondary" id="btn1">Downvote {{quote.downvotes}}</button>
+                    <i (click)="quote.upvotes=quote.upvotes+1" class="fa fa-thumbs-o-up" style="font-size:28px; color:blue"> {{quote.upvotes}}</i>
+                    <i (click)="quote.downvotes=quote.downvotes+1" id="btn1" class="fa fa-thumbs-o-down" style="font-size:28px; color: blue"> {{quote.downvotes}}</i>
                 </h5>
-
-                <button (click)='seeDetails(i)' class="btn btn-success btn-sm" id="scndbutton">Show Details</button>
+                <button (click)='seeDetails(i)' class="btn btn-outline-primary btn-sm" id="scndbutton">Show Details</button>
                 <app-quote-details *ngIf='quote.seeDetails' bind-quote = 'quote' (isDelete)='deleteQuote($event,i)'>
-
                 </app-quote-details>
             </div>
         </div>
