--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,1 +1,19 @@
-
+<h2 class="text-center">Create a new quote:</h2>
+<form action="">
+    <div class="form-group">
+        <label for="Author">Author:</label>
+        <input type="text" required class="form-control" name="name" id="">
+    </div>
+    <div class="form-group">
+        <label for="personSubmitted">Submitted by:</label>
+        <input type="text" required class="form-control" name="name" id="">
+    </div>
+    <div class="form-group">
+        <label for="quote">My Quote:</label>
+        <textarea class="form-control" name="" id="details" required cols="30" rows="10"></textarea>
+    </div>
+    <div class="form-group">
+        <label for="date">Date created:</label>
+        <input type="date" name="" class="form-control" id="dateCreated" required>
+    </div>
+</form>
