--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,5 +1,5 @@
 <h2 class="text-center">Create a new quote:</h2>
-<form action="">
+<form #quoteForm='ngForm'>
     <div class="form-group">
         <label for="Author">Author:</label>
         <input type="text" required class="form-control" name="name" id="">
