--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -3,18 +3,18 @@
     <div class="form-group">
         <label for="Author">Author:</label>
         <input type="text" [(ngModel)]='newQuote.author' required class="form-control" name="name" id="">
-        Display{{newQuote.author}}
     </div>
     <div class="form-group">
         <label for="personSubmitted">Submitted by:</label>
-        <input type="text" required class="form-control" name="name" id="">
+        <input type="text" [(ngModel)]='newQuote.personSubmitted' required class="form-control" name="name" id="">
     </div>
     <div class="form-group">
         <label for="quote">My Quote:</label>
-        <textarea class="form-control" name="" id="details" required cols="30" rows="10"></textarea>
+        <textarea class="form-control" [(ngModel)]='newQuote.name' name="name" id="details" required cols="30" rows="10"></textarea>
     </div>
     <div class="form-group">
         <label for="date">Date created:</label>
-        <input type="date" name="" class="form-control" id="dateCreated" required>
+        <input type="date" [(ngModel)]='newQuote.dateCreated'  name="name" class="form-control" id="dateCreated" required>
+        
     </div>
 </form>
