--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -2,19 +2,31 @@
 <form #quoteForm='ngForm'>
     <div class="form-group">
         <label for="Author">Author:</label>
-        <input type="text" [(ngModel)]='newQuote.author' required class="form-control" name="name" id="">
+        <input type="text" class="form-control" id="author" [(ngModel)]='newQuote.author' name="author" #author='ngModel' required>
+        <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
+            <p>Author details are required!</p>
+        </div>
     </div>
     <div class="form-group">
         <label for="personSubmitted">Submitted by:</label>
-        <input type="text" [(ngModel)]='newQuote.personSubmitted' required class="form-control" name="name" id="">
+        <input type="text" class="form-control" id="personSubmitted" [(ngModel)]='newQuote.personSubmitted' name="personSubmitted" #personSubmitted='ngModel' required>
+        <div [hidden]='personSubmitted.valid || personSubmitted.pristine' class="alert alert-danger">
+            <p>Please provide the name of the person who submitted the quote.</p>
+        </div>
     </div>
     <div class="form-group">
         <label for="quote">My Quote:</label>
-        <textarea class="form-control" [(ngModel)]='newQuote.name' name="name" id="details" required cols="30" rows="10"></textarea>
+        <textarea class="form-control" id="quote" [(ngModel)]='newQuote.name' name="name" #name='ngModel' required rows="5"></textarea>
+        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+            <p>You must add a quote!</p>
+        </div>    
     </div>
     <div class="form-group">
         <label for="date">Date created:</label>
-        <input type="date" [(ngModel)]='newQuote.dateCreated'  name="name" class="form-control" id="dateCreated" required>
-        
+        <input type="date" class="form-control" id="dateCreated" [(ngModel)]='newQuote.dateCreated' name="dateCreated" #dateCreated='ngModel' required>
+        <div [hidden]='dateCreated.valid || dateCreated.pristine' class="alert alert-danger">
+            <p>Provide creation date.</p>
+        </div>
     </div>
+    <button type="submit" class="btn btn-primary">Add Quote</button>
 </form>
