--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,3 +1,3 @@
 <h5>Author: {{quote.author}}<br>Submitted by: {{quote.personSubmitted}}<br>Created on: {{quote.dateCreated|date}}</h5>
 <h5>This quote was created {{quote.dateCreated|quoteAge}} days ago.</h5>
-<button (click)='quoteDelete(true)' class="btn btn-outline-danger" >Delete</button>
+<button (click)='quoteDelete(true)' class="btn btn-outline-danger" >Delete</button><hr>
