--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,18 +1,20 @@
 <div class="container">
-    <h1 class="text-center">Welcome to Quotes</h1>
+    <h1 class="text-center" >Welcome to Quotes</h1>
     <hr>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-3">
             <app-quote-form (addQuote)='addNewQuote($event)'></app-quote-form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-1"></div>
+        <div class="col-md-">
             <h2>Some of the famous quotes include:</h2>
             <div *ngFor='let quote of quotes;let i = index'>
-                <h5 >{{quote.id}} {{quote.name}} <br>
+                <h5>{{quote.id}} {{quote.name}}<br>                    
                     <i (click)="quote.upvotes=quote.upvotes+1" class="fa fa-thumbs-o-up" style="font-size:28px; color:blue"> {{quote.upvotes}}</i>
                     <i (click)="quote.downvotes=quote.downvotes+1" id="btn1" class="fa fa-thumbs-o-down" style="font-size:28px; color: blue"> {{quote.downvotes}}</i>
                 </h5>
                 <button (click)='seeDetails(i)' class="btn btn-outline-primary btn-sm" id="scndbutton">Show Details</button>
+                
                 <app-quote-details *ngIf='quote.seeDetails' bind-quote = 'quote' (isDelete)='deleteQuote($event,i)'>
                 </app-quote-details>
             </div>
