this commit  will add some custom stylings

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -9,9 +9,8 @@
         <div class="col-md-">
             <h2>Some of the famous quotes include:</h2>
             <div *ngFor='let quote of quotes;let i = index'>
-                <h5>{{quote.id}} {{quote.name}}<br>                    
-                 
-                </h5>
+                <h5 class="card-header">Quote {{quote.id}}</h5>
+                <h5 class="card-body">{{quote.name}}<br></h5>
                 <button (click)='seeDetails(i)' class="btn btn-outline-primary btn-sm" id="scndbutton">Show Details</button>
                 
                 <app-quote-details *ngIf='quote.seeDetails' bind-quote = 'quote' (isDelete)='deleteQuote($event,i)'>
