This commit will add custom stylings

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center">Create a new quote:</h2>
+<h2 class="text-center">New quote:</h2>
 <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
     <div class="form-group">
         <label for="Author">Author:</label>
