This commit will add an overlay to the quotes section

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,5 @@
     background-image: url('https://wallpaperplay.com/walls/full/e/a/4/13616.jpg#.XVlJ7rqeYB0.link');
     background-repeat: no-repeat;
     background-size: cover; 
+    background-attachment: fixed; 
 }
