--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -10,3 +10,8 @@ h2{
 #scndbutton{
     padding: 2%;
 }
+.overlay{
+        background-color: rgb(0,0,0,0.5);
+        opacity: 0.9;
+        border-radius: 10px;
+}
