--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -6,14 +6,17 @@
             <app-quote-form (addQuote)='addNewQuote($event)'></app-quote-form>
         </div>
         <div class="col-md-1"></div>
-        <div class="col-md-">
-            <h2>Some of the famous quotes include:</h2>
+        <div class="overlay">
+            <h2 class="text-white text-center">Some famous quotes:</h2>
             <div *ngFor='let quote of quotes;let i = index'>
-                <h5 class="card-header text-white" style="background-color: blue">Quote {{quote.id}}</h5>
-                <h5 class="card-body">{{quote.name}}<br></h5>
+                <div class="card-header">
+                <h5 class="text-white">Quote {{quote.id}}</h5>
+                <h5 class="text-white">{{quote.name}}<br></h5>
                 <button (click)='seeDetails(i)' class="btn btn-outline-primary btn-sm" id="scndbutton">Show Details</button>
+                
                 <app-quote-details *ngIf='quote.seeDetails' bind-quote = 'quote' (isDelete)='deleteQuote($event,i)'>
                 </app-quote-details>
+            </div>
             </div>
         </div>
     </div>
