--- a/src/app/quote-form/quote-form.component.css
+++ b/src/app/quote-form/quote-form.component.css
@@ -1,3 +1,8 @@
 h2{
     text-decoration: underline;
 }
+.overlay{
+    background-color: rgb(0,0,0,0.5);
+    opacity: 0.9;
+    border-radius: 10px;
+}
