--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,28 +1,29 @@
-<h2 class="text-center">New quote:</h2>
+<div class="overlay">
+<h2 class="text-center text-white">New quote:</h2>
 <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
     <div class="form-group">
-        <label for="Author">Author:</label>
+        <label class="text-white" for="Author">Author:</label>
         <input type="text" class="form-control" id="author" [(ngModel)]='newQuote.author' name="author" #author='ngModel' required>
         <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
             <p>Author details are required!</p>
         </div>
     </div>
     <div class="form-group">
-        <label for="personSubmitted">Submitted by:</label>
+        <label class="text-white" for="personSubmitted">Submitted by:</label>
         <input type="text" class="form-control" id="personSubmitted" [(ngModel)]='newQuote.personSubmitted' name="personSubmitted" #personSubmitted='ngModel' required>
         <div [hidden]='personSubmitted.valid || personSubmitted.pristine' class="alert alert-danger">
             <p>Please provide the name of the person who submitted the quote.</p>
         </div>
     </div>
     <div class="form-group">
-        <label for="quote">My Quote:</label>
+        <label class="text-white" for="quote">My Quote:</label>
         <textarea class="form-control" id="quote" [(ngModel)]='newQuote.name' name="name" #name='ngModel' required rows="5"></textarea>
         <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
             <p>You must add a quote!</p>
         </div>    
     </div>
     <div class="form-group">
-        <label for="date">Date created:</label>
+        <label class="text-white" for="date">Date created:</label>
         <input type="date" class="form-control" id="dateCreated" [(ngModel)]='newQuote.dateCreated' name="dateCreated" #dateCreated='ngModel' required>
         <div [hidden]='dateCreated.valid || dateCreated.pristine' class="alert alert-danger">
             <p>Provide creation date.</p>
@@ -30,3 +31,4 @@
     </div>
     <button type="submit" class="btn btn-primary">Add Quote</button>
 </form>
+</div>
