This comit will add a reset button to the form

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -30,5 +30,6 @@
         </div>
     </div>
     <button type="submit" class="btn btn-primary">Add Quote</button>
+    <button type="reset" class="btn btn-primary" id="scndbutton">Reset</button>
 </form>
 </div>
