--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -10,7 +10,7 @@
             <h2 class="text-white text-center">Some famous quotes:</h2>
             <div *ngFor='let quote of quotes;let i = index'>
                 <div class="card-header">
-                <h5 class="text-white">Quote {{quote.id}}</h5>
+                <h5 class="text-white">Quote</h5>
                 <h5 class="text-white">{{quote.name}}<br></h5>
                 <button (click)='seeDetails(i)' class="btn btn-outline-primary btn-sm" id="scndbutton">Show Details</button>
                 
