--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -12,7 +12,7 @@
                 <div class="card-header">
                 <h5 class="text-white">Quote</h5>
                 <h5 class="text-white">{{quote.name}}<br></h5>
-                <button (click)='seeDetails(i)' class="btn btn-outline-primary btn-sm" id="scndbutton">Show Details</button>
+                <button (click)='seeDetails(i)' class="btn btn-primary btn-sm" id="scndbutton">Show Details</button>
                 
                 <app-quote-details *ngIf='quote.seeDetails' bind-quote = 'quote' (isDelete)='deleteQuote($event,i)'>
                 </app-quote-details>
