--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,5 +1,5 @@
 <p class="text-white">Author: {{quote.author}}<br>Submitted by: {{quote.personSubmitted}}<br>Created on: {{quote.dateCreated|date}}</p>
 <p class="text-white">This quote was created {{quote.dateCreated|quoteAge}} days ago.</p>
-<i (click)="quote.upvotes=quote.upvotes+1" class="fa fa-thumbs-up" style="font-size:28px; color:blue"> {{quote.upvotes}}</i>
-<i (click)="quote.downvotes=quote.downvotes+1" id="btn1" class="fa fa-thumbs-down" id="icn2" style="font-size:28px; color: red"> {{quote.downvotes}}</i>
-<button (click)='quoteDelete(true)' class="btn btn-outline-danger" id="icn3" ><i class="fa fa-trash" style="font-size:28px"></i></button><hr>
+<i (click)="quote.upvotes=quote.upvotes+1" class="fa fa-thumbs-up" style="font-size:28px; color:white"> {{quote.upvotes}}</i>
+<i (click)="quote.downvotes=quote.downvotes+1" id="btn1" class="fa fa-thumbs-down" id="icn2" style="font-size:28px; color: white"> {{quote.downvotes}}</i>
+<button (click)='quoteDelete(true)' class="btn " id="icn3" ><i class="fa fa-trash" style="font-size:28px; color: white"></i></button><hr>
