--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 .landing-page{
-    background-image: url('https://wallpaperplay.com/walls/full/0/c/4/13637.jpg#.XVlJ7qHYLVo.link');
+    background-image: url('https://wallpaperplay.com/walls/full/5/5/6/13611.jpg#.XVpLE0SBPEQ.link');
     background-repeat: no-repeat;
     background-size: cover; 
     background-attachment: fixed; 
